# cookiecutter-django-rest-framework

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/server/: Dockerfile  conftest.py  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_name}}/server/apps/chat/: routing.py
{{cookiecutter.project_name}}/server/apps/chat/consumers/: __init__.py
{{cookiecutter.project_name}}/server/apps/chat/consumers/room/: __init__.py  actions.py  constants.py  consumer.py  events.py  queries.py  services.py
{{cookiecutter.project_name}}/server/apps/core/: models.py  serializers.py  views.py
{{cookiecutter.project_name}}/server/apps/core/consumer/: __init__.py
{{cookiecutter.project_name}}/server/apps/core/middleware/: __init__.py  jwt_query_param_authentication.py
{{cookiecutter.project_name}}/server/apps/core/mixins/consumers/: __init__.py  action_handler.py
{{cookiecutter.project_name}}/server/apps/core/models/: __init__.py
{{cookiecutter.project_name}}/server/apps/core/serializers/: __init__.py
{{cookiecutter.project_name}}/server/apps/core/services/: __init__.py  email.py  pagination.py
{{cookiecutter.project_name}}/server/apps/core/viewsets/: __init__.py  base.py  retrieve_update.py
{{cookiecutter.project_name}}/server/apps/users/: schedules.py  tasks.py  views.py
{{cookiecutter.project_name}}/server/apps/users/factories/: user.py
{{cookiecutter.project_name}}/server/apps/users/permissions/: user.py
{{cookiecutter.project_name}}/server/apps/users/serializers/: __init__.py  user.py
{{cookiecutter.project_name}}/server/apps/users/tests/: test_user.py
{{cookiecutter.project_name}}/server/apps/users/viewsets/: __init__.py  user.py
{{cookiecutter.project_name}}/server/config/: api_router.py  asgi.py  celery.py  gunicorn.py  routing.py  urls.py
{{cookiecutter.project_name}}/server/config/settings/: __init__.py  celery.py  drf.py  email.py  installed_apps.py  settings.py
{{cookiecutter.project_name}}/server/config/test/: __init__.py
{{cookiecutter.project_name}}/server/config/tests/: __init__.py
{{cookiecutter.project_slug}}/server/: Dockerfile  Makefile  log_conf.json  manage.py  pyproject.toml  pytest.ini
{{cookiecutter.project_slug}}/server/apps/chat/: apps.py
{{cookiecutter.project_slug}}/server/apps/chat/consumers/room/: actions.py  (+3 more)
{{cookiecutter.project_slug}}/server/apps/core/: apps.py
{{cookiecutter.project_slug}}/server/apps/core/consumer/: __init__.py  base_consumer.py
{{cookiecutter.project_slug}}/server/apps/core/middleware/: __init__.py  jwt_cookie_authentication.py
{{cookiecutter.project_slug}}/server/apps/core/models/: __init__.py
{{cookiecutter.project_slug}}/server/apps/core/serializers/: __init__.py
{{cookiecutter.project_slug}}/server/apps/core/services/: __init__.py  exception_handler.py  pagination.py
{{cookiecutter.project_slug}}/server/apps/core/utils/: __init__.py  exception_handler.py
{{cookiecutter.project_slug}}/server/apps/core/viewsets/: __init__.py  base.py  create_retrieve_update.py
{{cookiecutter.project_slug}}/server/apps/users/: apps.py  schedules.py
{{cookiecutter.project_slug}}/server/apps/users/factories/: __init__.py
{{cookiecutter.project_slug}}/server/apps/users/permissions/: __init__.py  user.py
{{cookiecutter.project_slug}}/server/apps/users/tests/: test_user.py
{{cookiecutter.project_slug}}/server/config/: api_router.py  asgi.py  celery.py  gunicorn.py  routing.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/server/config/development/: celery.py  drf.py  settings.py
{{cookiecutter.project_slug}}/server/config/production/: __init__.py
{{cookiecutter.project_slug}}/server/config/settings/: __init__.py  drf.py  email.py  settings.py
{{cookiecutter.project_slug}}/server/config/test/: __init__.py
{{cookiecutter.project_slug}}/server/scripts/: fill_sample_data.py
(+41 files in other folders)
