[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

[tool.poetry.dependencies]
python = "^3.10.5"
Pillow = "9.5.0"
django = "4.2.1"
redis = "4.5.5"
django-redis = "5.2.0"
{%- if cookiecutter.celery != 'n' %}
celery = {extras = ["redis"], version = "5.2.7"}
django-celery-beat = "2.5.0"
flower = "1.2.0"
{%- endif %}
django-model-utils = "4.3.1"
djangorestframework = "3.14.0"
django-cors-headers = "3.14.0"
psycopg2-binary = "2.9.6"
gunicorn = "^21.2.0"
django-extensions = "3.2.1"
dj-database-url = "1.3.0"
djangorestframework-simplejwt = "4.8.0"
{%- if cookiecutter.websockets != 'n' %}
channels = {extras = ["daphne"], version = "4.0.0"}
channels-redis = "4.1.0"
{%- endif %}
uvicorn = "^0.18.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-django = "4.5.2"
pytest-asyncio = "0.21.1"
djangorestframework-stubs = "1.10.0"
flake8 = "4.0.1"
flake8-isort = "4.2.0"
factory-boy = "3.2.1"
coverage = "7.3.2"
pytest-cov = "4.1.0"
django-coverage-plugin = "2.0.4"
django-debug-toolbar = "3.8.1"
django-stubs = "1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
